# aquaraft

./: LICENSE-APACHE  LICENSE-MIT  rust-toolchain
.github/workflows/: ci.yml
crates/raft/: Cargo.toml
crates/raft/src/: lib.rs  messages.rs  node.rs  option_ext.rs  state.rs  test_utils.rs  yielder_ext.rs
crates/raft/src/node/: candidate.rs  follower.rs  leader.rs
crates/raft/src/node/follower/: traversal.rs
crates/vecmap/: Cargo.toml
crates/vecmap/src/: lib.rs
