[package]
name = "aquaraft_raft"
version = "0.1.0"
edition = "2021"

[features]
diagnostics = []

[dependencies]
futures-util = { version = "0.3.21", default-features = false, features = ["async-await-macro"] }
enstream = "0.3.0"
itertools = { version = "0.10.3", default-features = false }
pin-project = "1.0.11"
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.140", default-features = false, features = ["alloc", "derive"] }
tracing = { version = "0.1.35", default-features = false }
aquaraft_vecmap = { path = "../vecmap" }

[dev-dependencies]
flume = "0.10.14"
rand = "0.8.5"
tokio = { version = "1.20.0", features = ["macros", "time", "test-util"] }
